docs: rewrite all agents and docs to English, add game psychologist agent
- Rewrite all 21 agent definitions from German to English with concrete
  trigger-optimized descriptions for better agent selection
- Add voyager-game-psychologist agent (mandatory for all gameplay decisions)
- Translate all docs/ files to English (migration plan, status, physics ref,
  deployment guide, decision docs)
- Rewrite README.md to highlight AI-agent experiment approach
- Update CLAUDE.md: add psychologist as always-active agent, list all domain
  agents, switch doc language to English
- Add builder setup UX analysis and map versioning research docs